Added utility classes

--- a/src/test/resources/config/qa.properties
+++ b/src/test/resources/config/qa.properties
@@ -1,8 +1,12 @@
 browser = chrome
 appurl = https://tutorialsninja.com/demo/index.php?route=account/login
 
+username = testing_demo@gmail.com
+password = test@123
+
+highlight = true
 headless = false
 incognito = true
-remote = true
+remote = false
 
 huburl = http://127.0.0.1:4444/wd/hub
