--- a/src/test/resources/config/qa.properties
+++ b/src/test/resources/config/qa.properties
@@ -4,9 +4,9 @@ appurl = https://tutorialsninja.com/demo/index.php?route=account/login
 username = testing_demo@gmail.com
 password = test@123
 
-highlight = true
+highlight = false
 headless = false
-incognito = true
+incognito = false
 remote = false
 
 huburl = http://127.0.0.1:4444/wd/hub
