--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
 		<maven.compiler.source>11</maven.compiler.source>
 		<maven.compiler.target>11</maven.compiler.target>
 		<extentreports-version>5.0.8</extentreports-version>
+		<aspectj.version>1.9.19</aspectj.version>
 	</properties>
 
 	<dependencies>
@@ -31,7 +32,7 @@
 			<artifactId>testng</artifactId>
 			<version>7.7.0</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>com.aventstack</groupId>
 			<artifactId>extentreports</artifactId>
@@ -45,17 +46,23 @@
 		</dependency>
 		
 		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjweaver</artifactId>
+			<version>${aspectj.version}</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-core</artifactId>
 			<version>2.20.0</version>
 		</dependency>
-		
+
 	</dependencies>
 
 	<build>
 		<pluginManagement>
 			<plugins>
-				
+
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
@@ -75,12 +82,26 @@
 						<forkCount>3</forkCount>
 						<reuseForks>true</reuseForks>
 						<suiteXmlFiles>
-							<suiteXmlFile>src/test/resources/testrunners/testng.xml</suiteXmlFile> 
-<!--							<suiteXmlFile>${suiteXmlFile}</suiteXmlFile>-->
+							<suiteXmlFile>
+								src/test/resources/testrunners/testng.xml</suiteXmlFile>
+							<!--							<suiteXmlFile>${suiteXmlFile}</suiteXmlFile>-->
 						</suiteXmlFiles>
+
+						<argLine>
+							-javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
+						</argLine>
+
 					</configuration>
+
+					<dependencies>
+						<dependency>
+							<groupId>org.aspectj</groupId>
+							<artifactId>aspectjweaver</artifactId>
+							<version>${aspectj.version}</version>
+						</dependency>
+					</dependencies>
 				</plugin>
-				
+
 			</plugins>
 		</pluginManagement>
 	</build>
