--- a/pom.xml
+++ b/pom.xml
@@ -131,9 +131,9 @@
 						<forkCount>3</forkCount>
 						<reuseForks>true</reuseForks>
 						<suiteXmlFiles>
-							<suiteXmlFile>
-								src/test/resources/testrunners/regression_test.xml</suiteXmlFile>
-							<!--							<suiteXmlFile>${suiteXmlFile}</suiteXmlFile>-->
+							<!--
+							<suiteXmlFile>src/test/resources/testrunners/regression_test.xml</suiteXmlFile>-->
+							<suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
 						</suiteXmlFiles>
 
 						<argLine>
