--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+ <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
@@ -131,9 +131,8 @@
 						<forkCount>3</forkCount>
 						<reuseForks>true</reuseForks>
 						<suiteXmlFiles>
-							
-<!--							<suiteXmlFile>src/test/resources/testrunners/regression_test.xml</suiteXmlFile>-->
-							<suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
+							<suiteXmlFile>src/test/resources/testrunners/regression_test.xml</suiteXmlFile>
+<!--							<suiteXmlFile>${suiteXmlFile}</suiteXmlFile>-->
 						</suiteXmlFiles>
 
 						<argLine>
